Refactored menu methods Added join game form Updated join game form style Added automatic random name generator (DUMMY ATM)

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -10,3 +10,10 @@
     width: 80%;
     font-size: 25px;
 }
+
+.btn-join-game {
+    margin-top: 25%;
+    margin-bottom: 10px;
+    width: 80%;
+    font-size: 25px;
+}
