added marking of cards that are eligible to play

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,7 +1,11 @@
 .card {
-    border: 5px solid transparent;
+    margin: 5px;
 }
 
 .card-selected {
-    border: 5px solid blue;
+    border: 5px solid blue !important;
+}
+
+.card-can-be-played {
+    border: 5px solid green;
 }
