--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,4 +1,5 @@
 .card {
+    pointer-events: auto;
     margin: 5px;
 }
 
@@ -8,4 +9,16 @@
 
 .card-can-be-played {
     border: 5px solid green;
+}
+
+.mouse-over-card {
+    transform: rotate(15deg);
+}
+
+.card-dragged-over {
+    border: 5px solid yellow !important;
+}
+
+.card img {
+    pointer-events: none !important;
 }
