--- a/src/styles/CardDefended.css
+++ b/src/styles/CardDefended.css
@@ -15,3 +15,7 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.card-defended {
+    pointer-events: none;  /* Prevents fucking drag up on Chrome */
+}
